package grpc

import (
	"context"
	"github.com/batazor/go-smpp/pb"
)

func (s *server) AddWorker(ctx context.Context, in *command.WorkerRequest) (*command.WorkerResponse, error) {
	return nil, nil
}

func (s *server) UpdateWorker(ctx context.Context, in *command.WorkerRequest) (*command.WorkerResponse, error) {
	return nil, nil
}

func (s *server) DeleteWorker(ctx context.Context, in *command.WorkerRequest) (*command.WorkerResponse, error) {
	return nil, nil
}
